--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "migration:show": "npm run typeorm migration:show",
     "migration:generate": "npm run typeorm migration:generate",
     "migration:create": "npm run typeorm migration:create",
+    "migration:revert": "npm run typeorm migration:revert",
     "db:migrate": "npm run typeorm migration:run",
     "db:create": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js db:create",
     "db:drop": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js db:drop",
