--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "db:migrate": "npm run typeorm migration:run",
     "db:create": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js db:create",
     "db:drop": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js db:drop",
-    "db:seed": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js seed"
+    "db:seed": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js seed",
+    "nest": "nest"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -42,7 +43,7 @@
     "typeorm-extension": "^2.3.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
+    "@nestjs/cli": "^9.1.5",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
