El puerto viene en la variable PORT

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Este archivo puede copiarse con el nombre .env para configurar variables de entorno.
 # Ver config/configuration.ts para conocer todas las variables disponibles.
 
-SERVER_PORT=3000
+PORT=3000
 
 DATABASE_PORT=5555
 DATABASE_NAME=magis
