--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ PORT=3000
 DATABASE_PORT=5555
 DATABASE_NAME=magis
 DATABASE_PASSWORD=ultrasecreto
+
+KEYCLOAK_CLIENT_SECRET=HHZE4G98EMAlNMD3UrMBBjPJS3DLfhPc
