--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,27 @@ services:
     restart: always
     environment:
       POSTGRES_PASSWORD: admin1234
-      POSTGRES_DB: magistrades-development
     volumes:
       - ./docker/postgres/data:/var/lib/postgresql/data
       - ./docker/postgres/init:/docker-entrypoint-initdb.d/
     ports:
       - '5432:5432'
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:latest
+    restart: always
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin1234
+      KC_DB: postgres
+      KC_DB_URL_HOST: database
+      KC_DB_USERNAME: postgres
+      KC_DB_PASSWORD: admin1234
+    volumes:
+      - ./docker/keycloak/init:/opt/keycloak/data/import
+    depends_on:
+      - database
+    ports:
+      - 8080:8080
+      - 8443:8443
+    command: start-dev --import-realm
